--- a/ucf-publish/mdfrefer-demo/index.html
+++ b/ucf-publish/mdfrefer-demo/index.html
@@ -7,8 +7,9 @@
   />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SPA</title>
+  <link href="../static/mdf-refer/index.css" rel="stylesheet" media="screen" />
   <link href="../static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
-<link href="../mdfrefer-demo/index.css?8b6d092637146fad2bec" rel="stylesheet"></head>
+<link href="../mdfrefer-demo/index.css?a87428b7ee031bc061de" rel="stylesheet"></head>
 
 <body>
   <div id="app">
@@ -24,5 +25,5 @@
   <script src="../static/react/16.8.4/umd/react-dom.production.min.js"></script>
   <script src="../static/prop-types/15.6.0/prop-types.min.js"></script>
   <script src="../static/tinper-bee/latest/build/tinper-bee.min.js"></script>
-<script type="text/javascript" src="../mdfrefer-demo/index.js?8b6d092637146fad2bec"></script></body>
+<script type="text/javascript" src="../mdfrefer-demo/index.js?a87428b7ee031bc061de"></script></body>
 </html>
