--- a/ucf-apps/mdfrefer-demo/src/index.html
+++ b/ucf-apps/mdfrefer-demo/src/index.html
@@ -7,6 +7,7 @@
   />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SPA</title>
+  <link href="http://iuap-design-cdn.oss-cn-beijing.aliyuncs.com/static/antd/antd.css" rel="stylesheet" type="text/css">
   <link href="${process.env.STATIC_HTTP_PATH}/mdf-refer/index.css" rel="stylesheet" media="screen" />
   <link href="${process.env.STATIC_HTTP_PATH}/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
 </head>
