--- a/ucf-publish/mdfrefer-demo/index.html
+++ b/ucf-publish/mdfrefer-demo/index.html
@@ -7,9 +7,10 @@
   />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>SPA</title>
+  <link href="http://iuap-design-cdn.oss-cn-beijing.aliyuncs.com/static/antd/antd.css" rel="stylesheet" type="text/css">
   <link href="../static/mdf-refer/index.css" rel="stylesheet" media="screen" />
   <link href="../static/tinper-bee/latest/assets/tinper-bee.css" rel="stylesheet" media="screen" />
-<link href="../mdfrefer-demo/index.css?89b700d42f510a026415" rel="stylesheet"></head>
+<link href="../mdfrefer-demo/index.css?663e766f464f7016d21a" rel="stylesheet"></head>
 
 <body>
   <div id="app">
@@ -25,5 +26,5 @@
   <script src="../static/react/16.8.4/umd/react-dom.production.min.js"></script>
   <script src="../static/prop-types/15.6.0/prop-types.min.js"></script>
   <script src="../static/tinper-bee/latest/build/tinper-bee.min.js"></script>
-<script type="text/javascript" src="../mdfrefer-demo/index.js?89b700d42f510a026415"></script></body>
+<script type="text/javascript" src="../mdfrefer-demo/index.js?663e766f464f7016d21a"></script></body>
 </html>
